--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     }
   </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-row space-x-6 p-6">
+<body class="bg-gray-100 min-h-screen flex flex-col md:flex-row md:space-x-6 p-4 md:p-6">
 
   <!-- Main Selector Section -->
-  <div class="w-full max-w-lg bg-white p-6 rounded-lg shadow-md">
-    <h1 class="text-2xl font-bold text-gray-800 mb-4">Select Locations</h1>
+  <div class="w-full md:max-w-lg bg-white p-4 md:p-6 rounded-lg shadow-md mb-6 md:mb-0">
+    <h1 class="text-xl md:text-2xl font-bold text-gray-800 mb-4">Select Locations</h1>
 
     <!-- City Display -->
     <div class="mb-4">
-      <p id="cityDisplay" class="text-lg text-gray-700">City: Brisbane</p>
+      <p id="cityDisplay" class="text-base md:text-lg text-gray-700">City: Brisbane</p>
     </div>
 
     <!-- Combo Box -->
@@ -57,14 +57,14 @@
     </div>
 
     <!-- Selected Locations -->
-    <h2 class="text-lg font-semibold text-gray-700 mb-2">Selected Locations:</h2>
+    <h2 class="text-base md:text-lg font-semibold text-gray-700 mb-2">Selected Locations:</h2>
     <ul id="selectedLocations" class="space-y-2">
       <!-- Selected locations will appear here -->
     </ul>
   </div>
 
   <!-- Map Section -->
-  <div id="map" class="w-1/2 h-screen rounded-lg shadow-md"></div>
+  <div id="map" class="w-full md:w-1/2 h-96 md:h-screen rounded-lg shadow-md"></div>
 
   <script>
     const searchBox = document.getElementById('searchBox');
@@ -92,7 +92,6 @@
           zoom: 12,
           duration: 1000, // Reset to default view smoothly
           essential: true
-
         });
         return;
       }
@@ -104,7 +103,8 @@
 
       const center = bounds.getCenter();
       const distance = bounds.getNorthEast().distanceTo(bounds.getSouthWest());
-      const zoom = Math.min(18, Math.max(14, Math.log2(40075017 / distance) - 8));
+      const isMobile = window.matchMedia("(max-width: 768px)").matches;
+      const zoom = isMobile ? Math.min(15, Math.max(12, Math.log2(40075017 / distance) - 8)) : Math.min(18, Math.max(14, Math.log2(40075017 / distance) - 8));
 
       map.flyTo({
         center,
